RESOLVED FIXED31188
REGRESSION Clean up security origin usage in DOM Storage.
https://bugs.webkit.org/show_bug.cgi?id=31188
Summary REGRESSION Clean up security origin usage in DOM Storage.
Jeremy Orlow
Reported 2009-11-05 14:51:52 PST
Clean up security origin usage in DOM Storage. This fixes a bug in my refactoring here: https://bugs.webkit.org/show_bug.cgi?id=31149 Instead of having StorageAreaSync's constructor (which is called in the constructor for StorageAreaImpl) calling a method on StoargeAreaImpl to get the database identifier, simply have StorageAreaImpl pass the identifier into StorageAreaSync.
Attachments
Patch (5.75 KB, patch)
2009-11-05 14:55 PST, Jeremy Orlow
dglazkov: review+
Jeremy Orlow
Comment 1 2009-11-05 14:55:39 PST
Dimitri Glazkov (Google)
Comment 2 2009-11-05 14:58:00 PST
Comment on attachment 42599 [details] Patch r=me.
Jeremy Orlow
Comment 3 2009-11-05 15:26:15 PST
Note You need to log in before you can comment on or make changes to this bug.